Made few documentation changes

--- a/1. Pdf Maker/Pdf Maker.ipynb
+++ b/1. Pdf Maker/Pdf Maker.ipynb
@@ -4,12 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5> Problem Faced:</h5>\n",
-    "<h6>\n",
-    " During my college, we used a get lots of random assignments and projects. We used to scan every individual page and then convert it into a PDF file. It was a very time-consuming process. So, I decided to automate this process using Python.\n",
-    "</h6>\n",
+    "<h3> Problem Faced:</h3>\n",
+    "<h4>\n",
+    " During my college, we used a get lots of random assignments and projects. We used to scan every individual page and then convert it into a PDF file. It was a very time-consuming process. So, I decided to automate this process using Python.h4/h6>\n",
     "\n",
-    "<h6>\n",
+    "<h4>\n",
     "All I need was to just take a click by the normal camera and add the images from internet. Then, I need to convert it into a PDF file. So, I decided to use the Python Imaging Library (PIL) and the Python Imaging Library (PIL) to do this task. This would even resolve the problem of the image quality and extension of the image.</h6>"
    ]
   },
@@ -31,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CASE 1: The user just need to merge the different images into a single PDF file."
+    "## CASE 1: The user just need to merge the different images into a single PDF file."
    ]
   },
   {
@@ -71,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CASE 2: The user just need to merge the different images stored into subfolders into pdf files, where each subfolder will be converted into a single pdf file."
+    "## CASE 2: The user just need to merge the different images stored into subfolders into pdf files, where each subfolder will be converted into a single pdf file."
    ]
   },
   {
@@ -142,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CASE 3: The user just need to merge the different pdf files into a single PDF file."
+    "## CASE 3: The user just need to merge the different pdf files into a single PDF file."
    ]
   },
   {
