Resolved issues with Alpha Channel, Webp, Name

--- a/1. Pdf Maker/Pdf Maker.ipynb
+++ b/1. Pdf Maker/Pdf Maker.ipynb
@@ -138,6 +138,167 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scan all the subdirectories and rename the name such that whenever a [ or ( or - is found, split the name and take the first part \n",
+    "\n",
+    "# Import the required libraries\n",
+    "import os\n",
+    "\n",
+    "# Set the working directory\n",
+    "directory=\"Max\"\n",
+    "\n",
+    "# Get the list of subdirectories in the directory\n",
+    "subdirectories = [f for f in os.listdir(directory) if os.path.isdir(os.path.join(directory, f))]\n",
+    "# Loop through the list of subdirectories\n",
+    "for subdirectory in subdirectories:\n",
+    "    # Get the path of the subdirectory\n",
+    "    subdirectory_path = os.path.join(directory, subdirectory)\n",
+    "    # Get the name of the subdirectory\n",
+    "    subdirectory_name = os.path.basename(subdirectory_path)\n",
+    "    # Check if the name of the subdirectory contains a [ or ( or -\n",
+    "    if \"[\" in subdirectory_name or \"(\" in subdirectory_name or \"-\" in subdirectory_name:\n",
+    "        # Split the name of the subdirectory\n",
+    "        subdirectory_name = subdirectory_name.split(\"[\")[0].split(\"(\")[0].split(\"-\")[0]\n",
+    "        # If the name already exist in the directory, append number to it\n",
+    "        if os.path.exists(os.path.join(directory, subdirectory_name)):\n",
+    "            # Get the list of subdirectories in the directory\n",
+    "            subdirectories = [f for f in os.listdir(directory) if os.path.isdir(os.path.join(directory, f))]\n",
+    "            # Get the list of subdirectories with the same name\n",
+    "            subdirectories = [f for f in subdirectories if f.startswith(subdirectory_name)]\n",
+    "            # Get the number of subdirectories with the same name\n",
+    "            number = len(subdirectories)\n",
+    "            # Rename the subdirectory\n",
+    "            os.rename(subdirectory_path, os.path.join(directory, subdirectory_name + \" \" + str(number+1)))\n",
+    "        # If the name does not exist in the directory, rename the subdirectory\n",
+    "        else:\n",
+    "            os.rename(subdirectory_path, os.path.join(directory, subdirectory_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scan files in the Max folder subfolders and convert all webp files to jpg\n",
+    "\n",
+    "# Import the required libraries\n",
+    "import os\n",
+    "import glob\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Set the working directory\n",
+    "directory=\"Max\"\n",
+    "\n",
+    "# Get the list of subdirectories in the directory\n",
+    "subdirectories = glob.glob(directory + \"/*\")\n",
+    "\n",
+    "# Loop through the list of subdirectories\n",
+    "for subdirectory in subdirectories:\n",
+    "    # Get the name of the subdirectory\n",
+    "    subdirectory_name = os.path.basename(subdirectory)\n",
+    "    # Get the path of the subdirectory\n",
+    "    subdirectory_path = os.path.join(directory, subdirectory_name)\n",
+    "    # Get the list of webp files in the subdirectory\n",
+    "    webp_files = glob.glob(subdirectory_path + \"/*.webp\")\n",
+    "    # Loop through the list of webp files\n",
+    "    for webp_file in webp_files:\n",
+    "        # Get the name of the webp file\n",
+    "        webp_file_name = os.path.basename(webp_file)\n",
+    "        # Get the path of the webp file\n",
+    "        webp_file_path = os.path.join(subdirectory_path, webp_file_name)\n",
+    "        # Get the name of the jpg file\n",
+    "        jpg_file_name = webp_file_name.replace(\".webp\", \".jpg\")\n",
+    "        # Get the path of the jpg file\n",
+    "        jpg_file_path = os.path.join(subdirectory_path, jpg_file_name)\n",
+    "        # Open the webp file\n",
+    "        webp_file = Image.open(webp_file_path)\n",
+    "        # Convert the webp file to jpg\n",
+    "        webp_file.save(jpg_file_path, \"JPEG\")\n",
+    "        # Close the webp file\n",
+    "        webp_file.close()\n",
+    "        # Delete the webp file\n",
+    "        os.remove(webp_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scan files in the directory folder subfolders and sort them on names and rename then in order 0001, 0002, 0003, etc.\n",
+    "\n",
+    "# Import the required libraries\n",
+    "import os\n",
+    "\n",
+    "# Set the working directory\n",
+    "directory=\"files\"\n",
+    "# directory=\"Max\"\n",
+    "\n",
+    "# Get the list of subdirectories in the directory\n",
+    "subdirectories = [f for f in os.listdir(directory) if os.path.isdir(os.path.join(directory, f))]\n",
+    "\n",
+    "# Loop through the list of subdirectories\n",
+    "for subdirectory in subdirectories:\n",
+    "    # Get the path of the subdirectory\n",
+    "    subdirectory_path = os.path.join(directory, subdirectory)\n",
+    "    # Get the list of files in the subdirectory\n",
+    "    files = [f for f in os.listdir(subdirectory_path) if os.path.isfile(os.path.join(subdirectory_path, f))]\n",
+    "    # Sort the list of files\n",
+    "    files.sort()\n",
+    "    # Loop through the list of files\n",
+    "    for file in files:\n",
+    "        # Get the path of the file\n",
+    "        file_path = os.path.join(subdirectory_path, file)\n",
+    "        # Get the index of the file in the list of files\n",
+    "        index = files.index(file)\n",
+    "        # Rename the file\n",
+    "        os.rename(file_path, os.path.join(subdirectory_path, str(index+1).zfill(4)+\".jpg\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scan files in the Max folder subfolders and remove all alpha channel from jpg files\n",
+    "\n",
+    "# Import the required libraries\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Set the working directory\n",
+    "directory=\"Max\"\n",
+    "\n",
+    "# Get the list of subdirectories in the directory\n",
+    "subdirectories = [f for f in os.listdir(directory) if os.path.isdir(os.path.join(directory, f))]\n",
+    "# Loop through the list of subdirectories\n",
+    "for subdirectory in subdirectories:\n",
+    "    # Get the path of the subdirectory\n",
+    "    subdirectory_path = os.path.join(directory, subdirectory)\n",
+    "    # Get the list of files in the subdirectory\n",
+    "    files = [f for f in os.listdir(subdirectory_path) if os.path.isfile(os.path.join(subdirectory_path, f))]\n",
+    "    # Loop through the list of files\n",
+    "    for file in files:\n",
+    "        # Get the path of the file\n",
+    "        file_path = os.path.join(subdirectory_path, file)\n",
+    "        # Check if the file is a jpg file\n",
+    "        if file.endswith(\".jpg\"):\n",
+    "            # Open the jpg file\n",
+    "            image = Image.open(file_path)\n",
+    "            # Remove the alpha channel\n",
+    "            image = image.convert(\"RGB\")\n",
+    "            # Save the jpg file\n",
+    "            image.save(file_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
